online-travel-portal/k8s/hotel-booking-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-booking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hotel-booking
  template:
    metadata:
      labels:
        component: hotel-booking
    spec:
      containers:
        - name: book-hotel
          image: kamligupta/hotel-booking
          ports:
            - containerPort: 4001
