online-travel-portal/k8s/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq-server
      app.kubernetes.io/name: rabbitmq-1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: rabbitmq-server
        app.kubernetes.io/name: rabbitmq-1
    spec:
      containers:
        - name: rabbitmq-container
          image: rabbitmq:3.8
          ports:
            - containerPort: 5672
            - containerPort: 5671
            - containerPort: 25672
            - containerPort: 15692
            - containerPort: 15672
