online-travel-portal/k8s/user-management-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user-management
  template:
    metadata:
      labels:
        component: user-management
    spec:
      containers:
        - name: user
          image: kamligupta/user-management
          ports:
            - containerPort: 4000 # Container port which inside the POD, it should be bind to service target port
