online-travel-portal/k8s/flight-booking-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: flight-booking-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: flight-booking
  ports:
    - port: 3012
      targetPort: 4002
