online-travel-portal/k8s/hotel-booking-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel-booking-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: hotel-booking
  ports:
    - port: 3011
      targetPort: 4001
