online-travel-portal/k8s/rabbitmq-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: rabbitmq-server
    app.kubernetes.io/name: rabbitmq-1
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
