online-travel-portal/k8s/user-management-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: user-management-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: user-management
  ports:
    - port: 3010 # this port is expose for other services inside cluster
      targetPort: 4000 # this is the container port which is mention in deployment
